syntax = "proto2";

import "caffe2/proto/torch.proto";

package bytecode;

message InstructionProto { //instruction
  required string opCode = 1; 
  required uint32 N = 2;
  required int32 X =3;
  // padding?
}

message ConstantProto {
  enum ConstantKind {
    f = 0;  // double
    fs = 1; 
    i = 2; 
    is = 3; 
    s = 4; 
    ss = 5;
    t = 6; 
    ts = 7; 
    b = 8; // bool
    bs = 9;
    gs = 10; // GenericList
    gd = 11; // GenericDict
    tp = 12; // Tuple
    blb = 13; // blob
    ftr = 14; // future
    dvc = 15; // device
    obj = 16; // object
    n = 17; //None
  }
  required ConstantKind kind = 1;
  optional double float_value = 2;
  optional int64 int_value = 3;
  optional string string_value = 4;
  // if it's a tensor, the offset into the tensor table
  optional int64 tensor_id = 5;
  repeated int64 int_list = 6;
  repeated double float_list = 7;
  optional bool bool_value = 8;
  repeated bool bool_list = 9; 
}

message OperatorProto {
  required string name = 1;
  required string overload_name = 2;
}

message FrameProto { //instruction list
  required string name = 1;
  optional int64 pc = 2;
  repeated InstructionProto instructions = 3;
  repeated ConstantProto constants = 4; // IValues
  repeated OperatorProto operators = 5;
  // Binary files for efficiency and consistency for script model
  repeated torch.TensorDef tensors = 6; 
  // Do we support functions in mobile? Not the first version?
  // Do we support type and use GUARD in mobile?
}